fix: mudança na base de dados, alteração no dicionário de dados e na análise exploratória

--- a/notebooks/00-data-download.ipynb
+++ b/notebooks/00-data-download.ipynb
@@ -41,13 +41,7 @@
     "        'subtipo': 'nominal',\n",
     "    },\n",
     "    {\n",
-    "        'variavel': 'origin_1',\n",
-    "        'descricao': 'País de origem dos grãos',\n",
-    "        'tipo': 'qualitativa',\n",
-    "        'subtipo': 'nominal',\n",
-    "    },\n",
-    "    {\n",
-    "        'variavel': 'origin_2',\n",
+    "        'variavel': 'origin',\n",
     "        'descricao': 'País de origem dos grãos',\n",
     "        'tipo': 'qualitativa',\n",
     "        'subtipo': 'nominal',\n",
@@ -71,31 +65,18 @@
     "        'subtipo': 'ordinal',\n",
     "    },\n",
     "    {\n",
-    "        'variavel': 'desc_1',\n",
+    "        'variavel': 'review',\n",
     "        'descricao': 'Descrição da avaliação feita.',\n",
     "        'tipo': 'qualitativa',\n",
     "        'subtipo': 'nominal',\n",
-    "    },\n",
-    "    {\n",
-    "        'variavel': 'desc_2',\n",
-    "        'descricao': 'Descrição da avaliação feita.',\n",
-    "        'tipo': 'qualitativa',\n",
-    "        'subtipo': 'nominal',\n",
-    "    },\n",
-    "    {\n",
-    "        'variavel': 'desc_3',\n",
-    "        'descricao': 'Descrição da avaliação feita.',\n",
-    "        'tipo': 'qualitativa',\n",
-    "        'subtipo': 'nominal',\n",
-    "    },\n",
-    "    \n",
+    "    }\n",
     "    \n",
     "])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -156,56 +137,35 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>origin_1</td>\n",
+       "      <td>origin</td>\n",
        "      <td>País de origem dos grãos</td>\n",
        "      <td>qualitativa</td>\n",
        "      <td>nominal</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
-       "      <td>origin_2</td>\n",
-       "      <td>País de origem dos grãos</td>\n",
-       "      <td>qualitativa</td>\n",
-       "      <td>nominal</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
        "      <td>100g_USD</td>\n",
        "      <td>Preço por 100g dos grãos em dólar americano</td>\n",
        "      <td>quantitativa</td>\n",
        "      <td>contínua</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>7</th>\n",
+       "      <th>6</th>\n",
        "      <td>rating</td>\n",
        "      <td>Nota do café</td>\n",
        "      <td>quantitativa</td>\n",
        "      <td>discreta</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>8</th>\n",
+       "      <th>7</th>\n",
        "      <td>review_date</td>\n",
        "      <td>Data da avaliação do café</td>\n",
        "      <td>qualitativa</td>\n",
        "      <td>ordinal</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>desc_1</td>\n",
-       "      <td>Descrição da avaliação feita.</td>\n",
-       "      <td>qualitativa</td>\n",
-       "      <td>nominal</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>desc_2</td>\n",
-       "      <td>Descrição da avaliação feita.</td>\n",
-       "      <td>qualitativa</td>\n",
-       "      <td>nominal</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11</th>\n",
-       "      <td>desc_3</td>\n",
+       "      <th>8</th>\n",
+       "      <td>review</td>\n",
        "      <td>Descrição da avaliação feita.</td>\n",
        "      <td>qualitativa</td>\n",
        "      <td>nominal</td>\n",
@@ -215,36 +175,30 @@
        "</div>"
       ],
       "text/plain": [
-       "       variavel                                          descricao  \\\n",
-       "0          name                            Nome da mistura do café   \n",
-       "1       roaster  Nome do torrefador do café, o lugar que faz a ...   \n",
-       "2         roast                                      Tipo da torra   \n",
-       "3   loc_country  Localização onde se encontra o torrefador do c...   \n",
-       "4      origin_1                           País de origem dos grãos   \n",
-       "5      origin_2                           País de origem dos grãos   \n",
-       "6      100g_USD        Preço por 100g dos grãos em dólar americano   \n",
-       "7        rating                                       Nota do café   \n",
-       "8   review_date                          Data da avaliação do café   \n",
-       "9        desc_1                      Descrição da avaliação feita.   \n",
-       "10       desc_2                      Descrição da avaliação feita.   \n",
-       "11       desc_3                      Descrição da avaliação feita.   \n",
+       "      variavel                                          descricao  \\\n",
+       "0         name                            Nome da mistura do café   \n",
+       "1      roaster  Nome do torrefador do café, o lugar que faz a ...   \n",
+       "2        roast                                      Tipo da torra   \n",
+       "3  loc_country  Localização onde se encontra o torrefador do c...   \n",
+       "4       origin                           País de origem dos grãos   \n",
+       "5     100g_USD        Preço por 100g dos grãos em dólar americano   \n",
+       "6       rating                                       Nota do café   \n",
+       "7  review_date                          Data da avaliação do café   \n",
+       "8       review                      Descrição da avaliação feita.   \n",
        "\n",
-       "            tipo   subtipo  \n",
-       "0    qualitativa   nominal  \n",
-       "1    qualitativa   nominal  \n",
-       "2    qualitativa   ordinal  \n",
-       "3    qualitativa   nominal  \n",
-       "4    qualitativa   nominal  \n",
-       "5    qualitativa   nominal  \n",
-       "6   quantitativa  contínua  \n",
-       "7   quantitativa  discreta  \n",
-       "8    qualitativa   ordinal  \n",
-       "9    qualitativa   nominal  \n",
-       "10   qualitativa   nominal  \n",
-       "11   qualitativa   nominal  "
+       "           tipo   subtipo  \n",
+       "0   qualitativa   nominal  \n",
+       "1   qualitativa   nominal  \n",
+       "2   qualitativa   ordinal  \n",
+       "3   qualitativa   nominal  \n",
+       "4   qualitativa   nominal  \n",
+       "5  quantitativa  contínua  \n",
+       "6  quantitativa  discreta  \n",
+       "7   qualitativa   ordinal  \n",
+       "8   qualitativa   nominal  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -290,5 +244,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
